# skewer

./: .clang-format  .clang-tidy  .clangd  .dockerignore  .gcloudignore  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LOCAL_DEPLOYMENT.md  README.md  buf.yaml  go.mod  go.sum  mkdocs-pdf.yml  mkdocs.yml  pyproject.toml  test_output.exr  vcpkg.json
.zed/: settings.json
api/: CMakeLists.txt
api/proto/compositor/v1/: compositor.pb.go  compositor.proto  compositor_grpc.pb.go
api/proto/coordinator/v1/: coordinator.pb.go  coordinator.proto  coordinator_grpc.pb.go
api/proto/renderer/v1/: renderer.pb.go  renderer.proto  renderer_grpc.pb.go
apps/: .gitignore
libs/exrio/: CMakeLists.txt
libs/exrio/cmake/: exrioConfig.cmake.in
libs/exrio/include/exrio/: deep_compositor.h  deep_image.h  deep_reader.h  deep_row.h  deep_stream_reader.h  deep_writer.h  utils.h
libs/exrio/src/: deep_compositor.cc  deep_image.cc  deep_image.cpp  deep_reader.cc  deep_reader.cpp  deep_row.cc  deep_stream_reader.cc  deep_volume.cc  deep_volume.cpp  deep_writer.cc  deep_writer.cpp  utils.cc  utils.cpp
libs/exrio/tests/: test_helpers.h
libs/exrio/tests/integration/: test_compositor.cc  test_compositor.cpp  test_io_roundtrip.cc  test_io_roundtrip.cpp
libs/exrio/tests/unit/: test_deep_image.cc  test_deep_image.cpp  test_deep_pixel.cc  test_deep_row.cc  test_deep_sample.cc  test_deep_sample.cpp  test_deep_stream_reader.cc  test_deep_volume.cc  test_deep_volume.cpp  test_flatten.cc  test_flatten.cpp
libs/worker/: CMakeLists.txt
libs/worker/include/coordinator_worker/: worker_loop.h
libs/worker/src/: worker_loop.cc
libs/worker/tests/unit/: test_worker_utils.cc
loom/: .gitignore  CMakeLists.txt  README.md
loom/apps/cloud_worker/: main.cc
loom/apps/worker/: main.cc
loom/src/: composite_pipeline.cc  composite_pipeline.h  deep_compositor.cc  deep_compositor.cpp  deep_compositor.h  deep_image.cc  deep_image.cpp  deep_image.h  deep_info.h  deep_merger.cc  deep_merger.h  deep_options.h  deep_reader.cc  deep_reader.cpp  deep_row.h  deep_volume.cc  deep_volume.cpp  deep_volume.h  deep_writer.cc  deep_writer.h  indicators.h  main.cc  utils.cc  utils.h
loom/tests/: CMakeLists.txt  test_helpers.h
loom/tests/archive/: test_compositor.cc  test_deep_volume.cc
loom/tests/assets/: layer_fog.exr  layer_objects.exr
loom/tests/integration/: test_compositor.cc
loom/tests/unit/: test_deep_volume.cc  test_deeprow.cc  test_merge.cc  test_stress.cc
skewer/: .clang-format-ignore  CMakeLists.txt  README.md  go.mod
skewer/apps/cli/: main.cc
skewer/apps/cloud_worker/: main.cc
skewer/apps/worker/: main.cc
skewer/cmake/: SkewerCoreSources.cmake
skewer/docs/: .gitkeep
skewer/samples/: deepExamples.cpp  testDeepScanLineBasic.cpp
skewer/src/accelerators/: blas.h  bvh.cc  bvh.h  instance.h  tlas.cc  tlas.h
skewer/src/core/: constants.h  cpu_config.h  onb.h  progress_config.h  ray.h  rng.h  spectrum.h  transform.h  vec3.h
skewer/src/core/containers/: bounded_array.h  small_vector.h
skewer/src/core/math/: constants.h  matrix.h  onb.h  quat.h  quaternion.h  transform.h  utils.h
skewer/src/core/sampling/: medium_interaction.h  path_sample.h  rng.h  sampling.h  volume_stack.h  wavelength_sampler.h
skewer/src/core/spectral/: rgb2spec.cc  rgb2spec.h  spectral_curve.h  spectral_utils.h  spectrum.h  srgb_spec_data.cc
skewer/src/core/transport/: deep_path_recorder.h  deep_segment.h  medium_interaction.h  path_sample.h  surface_interaction.h
skewer/src/film/: deep_bucket.h  deep_segment_pool.cc  deep_segment_pool.h  film.cc  film.h  image_buffer.cc  image_buffer.h  sample_writer.h
skewer/src/geometry/: animated_sphere.h  boundbox.h  hittable.h  intersect_sphere.h  intersect_triangle.h  mesh.h  sphere.h  triangle.h
skewer/src/integrators/: integrator.h  normals.cc  path_sample.h  path_trace.cc  path_trace.h
skewer/src/io/: graph_from_json.cc  graph_from_json.h  image_io.cc  image_io.h  obj_loader.cc  obj_loader.h  rtw_stb_image.h  scene_loader.cc  scene_loader.h
skewer/src/kernels/: path_kernel.cc  path_kernel.h  sample_media.cc  sample_media.h  volume_dispatch.cc  volume_dispatch.h
skewer/src/kernels/utils/: direct_lighting.h  visibility.cc  visibility.h  volume_tracking.cc  volume_tracking.h
skewer/src/materials/: bsdf.cc  bsdf.h  material.h  texture.cc  texture.h  texture_lookup.h
skewer/src/media/: mediums.h  nano_vdb_medium.h  vdb_medium.h
skewer/src/scene/: animation.cc  animation.h  animation_evaluator.cc  animation_evaluator.h  camera.h  interp_curve.cc  interp_curve.h  light.cc  light.h  mesh_utils.h  scene.cc  scene.h  scene_graph.h  skybox.h  surface_interaction.h
skewer/src/session/: render_options.h  render_session.cc  render_session.h
skewer/tests/: CMakeLists.txt
skewer/tests/regression/: temp.md
skewer/tests/unit/: temp.md  test_animation.cc  test_animation_config.cc  test_film_alpha.cc  test_image_io.cc  test_interp_curve.cc  test_motion_blur.cc  test_quat.cc  test_scene_graph.cc  test_small_vector.cc  test_tlas.cc  test_trs.cc  test_volume_stack.cc
tests/: CMakeLists.txt
tests/integration/: test_golden_image.cc
tests/integration/fixtures/: .gitignore  golden_hashes.json
tests/integration/fixtures/golden_images/: light_area_emissive_800x450.exr  light_backlight_800x450.exr  light_dual_point_800x450.exr  light_hard_shadow_800x450.exr  light_single_point_800x450.exr  light_soft_shadow_800x450.exr  mat_all_mixed_800x450.exr  mat_glass_clear_800x450.exr  mat_glass_diamond_800x450.exr  mat_lambertian_red_800x450.exr  mat_metal_gold_800x450.exr  mat_metal_mirror_800x450.exr  mat_metal_rough_800x450.exr  vol_cloud_05_800x450.exr  vol_wdas_cloud_800x450.exr
tests/integration/fixtures/golden_scenes/light_area_emissive/: layer.json
tests/integration/fixtures/golden_scenes/light_backlight/: layer.json
tests/integration/fixtures/golden_scenes/light_dual_point/: layer.json
tests/integration/fixtures/golden_scenes/light_hard_shadow/: layer.json
tests/integration/fixtures/loom/: golden_hashes.json
tests/unit/: test_image_io.cc
(+433 files in other folders)
